# ramanujan

./: .gitignore  AGENTS.md  Cargo.toml  README.md  env.toml.example
_ai/: bug_0001.md  entity_player.md  flow_player_decrease_points.md  flow_player_increment_points.md  increment_goals.md  integration_tests_player_decrease_points.md  integration_tests_player_increment_points.md  tests_increment_goals.md
_ai/guides/: ai_sdd_guide.md  plsql_guidelines.md
_ai/old/: decrease_goals.md  increment_goals.md  tests_decrease_goals.md  tests_increment_goals.md
sql/: data.sql  schema.sql
src/: config.rs  db.rs  http.rs  lib.rs  main.rs
suggestions/: README.md
suggestions/examples/: bug_0001.md  entity_player.md  flow_player_decrease_goals.md  flow_player_increment_goals.md  integration_tests_player_decrease_goals.md  integration_tests_player_increment_goals.md
suggestions/guides/: ai_sdd_guide.md  ai_sdd_pitch_plsql.md
suggestions/templates/: bug.template.md  entity.template.md  flow.template.md  integration-test.template.md
tests/: oracle_smoke.rs
